# CPP-iz2-techpark_1_sem-

./: .gitignore  .travis.yml  CMakeLists.txt  main.c
libraries/dynamic/: libIZ2_dymamic.c  libIZ2_dymamic.h
libraries/static/: IZ2_STATIC.c  IZ2_STATIC.h
project/include/: IZ2_STATIC.h  libIZ2_dymamic.h
project/src/: IZ2_STATIC.c  libIZ2_dymamic.c  main.c
project/tests/: CMakeLists.txt  test.cpp
src/: lib.c  lib.h
tests/: CMakeLists.txt  test.cpp
