cmake_minimum_required(VERSION 3.10)
project(iz1 C)
set(CMAKE_CXX_STANDARD 11)
add_subdirectory(tests)
add_executable(iz1 main.c)
target_include_directories(iz1 PRIVATE src/)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(iz1 Threads::Threads)
add_library(staticLib STATIC ./libraries/static/IZ2_STATIC.c)
add_library(dynamicLib SHARED ./libraries/dynamic/libIZ2_dymamic.c)

target_link_libraries(iz1 staticLib dynamicLib)
